--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa de Cambio</title>
+    <title>Casa de Câmbio</title>
 </head>
 
 <body>
+    <h1>Casa de Câmbio</h1>
+    <p>Digite a Moeda</p>
+    <input type="text" name="" id="input-moeda">
+    <button id="search-btn">Pesquisar</button>
+
+    <div id="container"></div>
 
 
     <script src="src/main.js" type="module"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
